--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "dependencies": {
-    "@aws-sdk/client-sns": "^3.540.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "install": "^0.13.0",
     "npm": "^10.5.0"
+  },
+  "devDependencies": {
+    "@aws-sdk/client-sns": "^3.540.0",
+    "@aws-sdk/client-sns-node": "^0.1.0-preview.2",
+    "jest": "^29.7.0"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
